начало решиние задачи