@@ -1,17 +1,18 @@
 package school.faang.calculator;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class Main {
     public static void main(String[] args) {
-        List<Integer> numbers = List.of(1, 2, 3, 4, 5);
+        List<Integer> numbers = Arrays.asList(1, 2, 3, 4, 5);
 
         System.out.println("Сумма: " + sum(numbers)); // Вывод: Сумма: 15
-        System.out.println("Произведение: " + product(numbers)); // Вывод: Произведение: 120
+        System.out.println("Произведение чисел: " + product(numbers)); // Вывод: Произведение: 120
     }
 
     public static int calculate(List<Integer> nums, Calculator calculator) {
-        if (nums.isEmpty()) {
+        if (nums == null || nums.isEmpty()) {
             throw new IllegalArgumentException("Список чисел не должен быть пустым");
         }
         int result = nums.get(0);
